# dl2ac

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.py  extract_default_config.sh  justfile  pyproject.toml  requirements.txt
dl2ac/: config.py  containers.py  entry.py  example.py  labels.py  models.py  parsers.py  rules.py
docker/: Dockerfile  compose.build.yml  docker-compose.dev.expected-output.yml  docker-compose.dev.yml
example/: compose.yaml
example/authelia/: configuration.yml
tests/: conftest.py  docker_test.py  dynamic_config_test.py  entry_test.py  example_test.py  integration_test.py  labels_test.py  local_test.py  models_test.py  shared.py  static_config_test.py
typings/docker/: __init__.pyi  client.pyi
typings/docker/models/: containers.pyi
typings/ruamel/yaml/: __init__.pyi
