[tool.poetry]
name = "dl2ac"
version = "0.1.0"
description = ""
authors = ["Klaus Ondrag <klaus.ondrag@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# You must also update .pre-commit-config.yaml:pyright:additional_dependencies
python = "3.12.2"
docker = "^7.0.0"
loguru = "^0.7.2"
ruamel-yaml = "^0.18.6"
typer = "^0.12.0"

[tool.poetry.group.dev.dependencies]
# You must also update .pre-commit-config.yaml:pyright:additional_dependencies
# For docker types, See https://github.com/docker/docker-py/issues/2796
docker-stubs = {git = "https://github.com/rdozier-work/docker-stubs", rev = "9de7906804ae912f1d644c97b617ac77e784fca8"}
hypothesis = "^6.100.0"
pre-commit = "^3.7.0"
pyright = "^1.1.356"
pytest = "^8.1.1"
pytest-coverage = "^0.0"
ruff = "^0.3.5"

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
